fix: make it wotk

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,14 @@ server {
         proxy_pass http://cms;
     }
 
+    location /cms-api {
+        proxy_read_timeout 1800;
+        proxy_connect_timeout 1800;
+        proxy_send_timeout 1800;
+        send_timeout 1800;
+        proxy_pass http://cms;
+    }
+
     location /api {
         proxy_pass http://search;
     }
